--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/adapter-neon": "^7.1.0",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
+    "better-auth": "^1.4.7",
     "dotenv": "^17.2.3",
     "next": "16.0.10",
     "pg": "^8.16.3",
