--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pg": "^8.16.3",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-icons": "^5.5.0",
     "zod": "^4.2.1"
   },
   "devDependencies": {
