--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-icons": "^5.5.0",
+    "recharts": "^3.6.0",
     "zod": "^4.2.1"
   },
   "devDependencies": {
@@ -30,6 +31,8 @@
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.10",
+    "prettier": "^3.7.4",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "prisma": "^7.1.0",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
