--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^7.1.0",
     "better-auth": "^1.4.7",
     "dotenv": "^17.2.3",
+    "motion": "^12.23.26",
     "next": "16.0.10",
     "pg": "^8.16.3",
     "react": "19.2.1",
