--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@prisma/adapter-neon": "^7.1.0",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
+    "@tiptap/react": "^3.14.0",
+    "@tiptap/starter-kit": "^3.14.0",
     "better-auth": "^1.4.7",
     "dotenv": "^17.2.3",
     "html-to-image": "^1.11.13",
