--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@tiptap/react": "^3.14.0",
     "@tiptap/starter-kit": "^3.14.0",
     "better-auth": "^1.4.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "gsap": "^3.14.2",
     "html-to-image": "^1.11.13",
+    "lucide-react": "^0.562.0",
     "motion": "^12.23.26",
     "next": "16.0.10",
     "pg": "^8.16.3",
@@ -24,6 +28,7 @@
     "react-dom": "19.2.1",
     "react-icons": "^5.5.0",
     "recharts": "^3.6.0",
+    "tailwind-merge": "^3.4.0",
     "zod": "^4.2.1"
   },
   "devDependencies": {
@@ -40,6 +45,7 @@
     "prisma": "^7.1.0",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
