--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/adapter-neon": "^7.1.0",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
+    "@studio-freight/lenis": "^1.0.42",
     "@tiptap/react": "^3.14.0",
     "@tiptap/starter-kit": "^3.14.0",
     "better-auth": "^1.4.7",
