--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-icons": "^5.5.0",
+    "react-type-animation": "^3.2.0",
     "recharts": "^3.6.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.2.1"
